--- a/style1.css
+++ b/style1.css
@@ -1,4 +1,3 @@
-
 /* 清除默认样式 */
 * {
   margin: 0;
@@ -12,8 +11,11 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
+  background:linear-gradient(to right,#add8e6,white);
 }
-
+img{
+width:800px;
+}
 /* 顶部菜单栏容器样式 */
 #header {
   background-color: #f2f2f2;
@@ -30,7 +32,12 @@ body {
   text-decoration:10px;
   padding: 5px;
   border-radius: 5px;
+  display:flex;
+  flex-direction: row;
+  width:50%;
+  height:50%;
 }
+
 
 /* 菜单项鼠标悬停样式 */
 .label:hover {
@@ -41,11 +48,12 @@ body {
 .button {
   display: inline-block;
   padding: 10px 20px;
-  color: red;
+  color:green;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
+  font-weight:1000;
 }
 
 /* 按钮鼠标悬停样式 */
@@ -121,11 +129,12 @@ body {
 .search-container {
   display: flex;
   align-items: center;
-  width: 300px;
+  width: 80%;
   height: 40px;
   border: 1px solid #ccc;
   border-radius: 20px;
   overflow: hidden;
+  
 }
 
 /* 搜索图标的样式 */
@@ -148,6 +157,7 @@ body {
   background-color: #f2f2f2;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  width:200px;
 }
 
 .search-button:hover {
@@ -162,4 +172,7 @@ body {
   font-size: 14px;
   color: #666;
   margin-top: 50px;
+}
+span{
+  text-align:center;
 }
